--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,7 +50,7 @@ h1,
 h2,
 h3,
 h4 {
-  line-height: 1.3;
+  line-height: 1.25;
 }
 
 h1,
@@ -60,7 +60,6 @@ h2 {
 
 h1 {
   font-size: var(--size-700);
-  max-width: 15ch;
 }
 
 h2 {
@@ -79,6 +78,7 @@ h3 {
 /* Misc */
 img {
   max-width: min(55rem, 100%);
+  border-radius: 8px;
 }
 
 blockquote {
@@ -124,6 +124,7 @@ hr {
   hr {
     margin-top: var(--size-600);
     margin-bottom: var(--size-600);
+    opacity: 0.25;
   }
 }
 
@@ -143,7 +144,6 @@ h1,
 h2,
 h3,
 h4,
-p,
 figure,
 blockquote,
 dl,
