mantine core and copy button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,10 +28,12 @@ const pageTitle = "Trevor Tyler Lee"
 		<CopyButton
 			client:idle
 			label="trevortylerlee@gmail.com"
+			value="trevortylerlee@gmail.com"
 		/>
 		<CopyButton
 			client:idle
 			label="778-235-3815"
+			value="7782353815"
 		/>
 	</div>
 </BaseLayout>
