--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,6 +52,7 @@ const pageTitle = "Trevor Tyler Lee"
 		display: grid;
 		justify-content: center;
 		align-items: center;
+		margin-bottom: 3rem;
 	}
 
 	@media (min-width: 40rem) {
