--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -32,4 +32,14 @@ const { frontmatter } = Astro.props;
       margin-bottom: 2rem;
     }
   }
+
+  img {
+    margin-top: 3rem;
+  }
+
+  @media (min-width: 40rem) {
+    img {
+      margin-top: 6rem;
+    }
+  }
 </style>
