--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ const pageTitle = "Trevor Tyler Lee"
 	desc="An HTML color code matching game scored by calculating the difference between two RGB colors"
 	href="/posts/color"
 	src="/noisy-gradient.webp"
+	alt='A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
 	/>
 	<hr />
 	<div class="contact">
