add meta description

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,7 @@ const { pageTitle } = Astro.props
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="Trevor Tyler Lee's Portfolio Showcase | Web Developer from Vancouver, Canada" />
 		<title>{pageTitle}</title>
 	</head>
 	<body>
