adjust footer spacing on larger screens

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,10 +30,16 @@
   }
 
   .push-left {
-    margin-right: 1.5rem;
+    margin-right: 1rem;
   }
 
   .hr {
     margin-top: 2rem;
+  }
+
+  @media (min-width: 40rem) {
+    .push-left {
+      margin-right: 1.5rem;
+    }
   }
 </style>
