--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,11 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
 import CopyButton from '../components/CopyButton';
 
-const pageTitle = "Trevor Tyler Lee"
+const pageTitle = "Trevor Tyler Lee | Homepage"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-	<h1>Hi, I'm Trevor :)</h1>
+	<h1>Hi I'm Trevor :)</h1>
 	<p>I'm a student at BCIT studying web development and digital design.</p>
 	<p>I use things like TypeScript, Next.js, and NodeJS to create accessible, cross-platform web applications.</p>
 	<Card
