--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@
   --primary-color: rgb(255, 252, 83);
 }
 
+.dark body {
+  background: red;
+}
+
 body {
   background: var(--bg-color);
   color: var(--text-color);
