--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,7 +1,24 @@
 ---
 const { title, desc, href, alt, src } = Astro.props
+const lightGlow = 'rgb(227, 227, 227)'
+const darkGlow = 'rgb(40, 40, 40)'
 ---
-<style>
+
+<!-- TODO refactor this... passing in alt prop not working for card image -->
+<a href={href}>
+<div class='card'>
+  <img src={src} alt={href === '/posts/phished'
+    ?
+    'A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
+    : 
+    'A grainy gradient made of purple, pink, orange, and red.' 
+  }/>
+  <p class='title'>{title}</p>
+  <p>{desc}</p>
+</div>
+</a>
+
+<style define:vars={{ lightGlow, darkGlow }}>
   .card {
     cursor: pointer;
     padding: 1rem;
@@ -62,18 +79,3 @@ const { title, desc, href, alt, src } = Astro.props
     }
   }
 </style>
-
-<!-- TODO refactor this... passing in alt prop not working for card image -->
-
-<a href={href}>
-<div class='card'>
-  <img src={src} alt={href === '/posts/phished'
-    ?
-    'A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
-    : 
-    'A grainy gradient made of purple, pink, orange, and red.' 
-  }/>
-  <p class='title'>{title}</p>
-  <p>{desc}</p>
-</div>
-</a>
