--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -29,4 +29,10 @@ import ThemeIcon from "../components/ThemeIcon.astro";
     transform: scale(1.02);
     opacity: 0.9;
   }
+
+  .logo {
+    stroke: black;
+  }
+
+  :global(.dark) .logo { stroke: white; }
 </style>
