--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -18,9 +18,13 @@ const { frontmatter } = Astro.props;
 
 <style>
   .pub-date {
-    color: rgb(200, 200, 200);
+    color: rgb(26, 30, 43);
     font-style: italic;
     margin: 0;
+  }
+
+  :global(.dark) .pub-date {
+    color: rgb(200, 200, 200);
   }
 
   h1 {
