--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,20 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 <style>
 	h1 {
 		font-size: 2.5rem;
+		/* text-emphasis-style: "✦"; */
+		animation: animation 2s infinite ease-in-out
+	}
+
+	@keyframes animation {
+		0% {
+			text-emphasis-style: '✦';
+		}
+		50% {
+			text-emphasis-style: '✧';
+		}
+		100% {
+			text-emphasis-style: '✦';
+		}
 	}
 
 	h2 {
