--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ const { pageTitle } = Astro.props
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favi.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favi.svg?" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="Trevor Tyler Lee's Portfolio Showcase | Web Developer from Vancouver, Canada" />
