--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,13 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	src="/noisy-gradient.webp"
 	alt='A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
 	/>
+	<Card
+	title="Creative Work & Stuff"
+	desc=""
+	href="/posts/design"
+	src="/monke.png"
+	alt='A blue and yellow monkey with a black stroke around it squats on the ground as it covers its eyes with its left hand.'
+	/>
 	<hr />
 	<div class="contact">
 		<h2>Contact Me</h2>
