--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,8 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	title="Creative Work & Stuff"
 	desc=""
 	href="/posts/design"
-	src="/monke.png"
-	alt='A blue and yellow monkey with a black stroke around it squats on the ground as it covers its eyes with its left hand.'
+	src="/creative-work.png"
+	alt='The words "Creative Work", with a scribbled arrow aimed at the words "& Other Stuff".'
 	/>
 	<hr />
 	<div class="contact">
