edit desige post title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	alt='A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
 	/>
 	<Card
-	title="Creative Work & Stuff"
+	title="Creative Work & Other Stuff"
 	desc=""
 	href="/posts/design"
 	src="/creative-work.png"
