fix outline bug on themeicon

--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,7 +1,6 @@
 ---
 ---
-<div id="themeToggle">
-  <a href="#" aria-label="toggle color theme">
+<div id="themeToggle" tabindex="0" aria-label="toggle color theme">
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sun sun" width="48" height="48" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
     <circle cx="12" cy="12" r="4"></circle>
@@ -11,7 +10,6 @@
     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
     <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
 </svg>
-  </a>
 </div>
 
 <style>
@@ -25,10 +23,6 @@
 
   a:active {
     text-decoration: none;
-  }
-
-  a:focus {
-    outline: 2px solid white;
   }
 
   .moon { display: none; transition: 0.2s; }
@@ -69,4 +63,9 @@
   }
 
   document.getElementById("themeToggle").addEventListener("click", handleToggleClick);
+  document.getElementById("themeToggle").addEventListener("keydown", (e) => {
+    if (e.key === 'Enter') {
+      handleToggleClick()
+    }
+  });
 </script>
