--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<div id="themeToggle" tabindex="0" aria-label="toggle color theme">
+<div id="themeToggle" tabindex="0" aria-label="Toggle light and dark mode">
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sun sun" width="48" height="48" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
     <circle cx="12" cy="12" r="4"></circle>
