edit colors post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	src="/phished-screenshot.webp"
 	/>
 	<Card
-	title="HTML Color Code Game"
-	desc="An HTML color code matching game scored by calculating the difference between two RGB colors"
+	title="HTML Color Name Game"
+	desc="An HTML color name matching challenge scored by calculating the difference between two RGB colors"
 	href="/posts/color"
 	src="/noisy-gradient.webp"
 	alt='A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
