--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-	<h1>Hi I'm Trevor :)</h1>
+	<h1>Hi I'm Trevor :(</h1>
 	<p>I'm a student at BCIT studying web development and digital design.</p>
 	<p>I use things like TypeScript, Next.js, and NodeJS to create accessible, cross-platform web applications.</p>
 	<Card
