edit gradient animation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 	@media (prefers-reduced-motion: no-preference) {
 		h1 {
-			animation: animation 4s infinite ease-in-out
+			animation: animation 4s infinite alternate ease-in-out
 		}
 
 		@keyframes animation {
