--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -13,7 +13,11 @@
 </div>
 
 <style>
-  a {
+  #themeToggle {
+    cursor: pointer;
+  }
+
+  /* a {
     color: white;
   }
 
@@ -23,7 +27,7 @@
 
   a:active {
     text-decoration: none;
-  }
+  } */
 
   .moon { display: none; transition: 0.2s; }
   .moon:hover { stroke: violet; transform: scale(1.02); }
