--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	/>
 	<Card
 	title="HTML Color Name Game"
-	desc="An HTML color name matching challenge scored by calculating the difference between two RGB colors"
+	desc="An HTML color name matching challenge scored by calculating the difference between two colors"
 	href="/posts/color"
 	src="/noisy-gradient.webp"
 	alt='A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
