--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const darkLink = 'rgb(26, 30, 43)';
 <hr class='hr'/>
 <footer>
   <span>
-  <a href='https://github.com/tervonugget/astro'>Made with Astro 🚀</a>
+  <a href='https://github.com/tervonugget/astro'>Source code 🚀</a>
   </span>
   <span>
   <a class='push-left' href='https://github.com/tervonugget'>Github</a>
@@ -22,7 +22,8 @@ const darkLink = 'rgb(26, 30, 43)';
   a {
     font-size: 1rem;
     font-weight: 400;
-    color: var(--darkLink)
+    color: var(--darkLink);
+    border-bottom: none;
   }
 
   a:hover {
