adjust spacing in md posts

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -20,7 +20,7 @@ const { frontmatter } = Astro.props;
   .pub-date {
     color: rgb(26, 30, 43);
     font-style: italic;
-    margin: 0;
+    margin-top: 0.5rem;
   }
 
   :global(.dark) .pub-date {
@@ -29,6 +29,7 @@ const { frontmatter } = Astro.props;
 
   h1 {
     margin-top: 1rem;
+    line-height: 1;
   }
 
   .content {
