--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,12 +48,12 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 <style>
 	h1 {
-		font-size: 2.5rem;
+		font-size: 3rem;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
 		h1 {
-			animation: animation 4s infinite alternate ease-in-out
+			animation: animation 4s infinite;
 		}
 
 		@keyframes animation {
