--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ const { pageTitle } = Astro.props
 		<link rel="apple-touch-icon" type="image/svg+xml" href="/favi.svg?" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Trevor Tyler Lee's Portfolio Showcase | Web Developer from Vancouver, Canada" />
+		<meta name="description" content="Trevor Tyler Lee's Portfolio Showcase | Web Developer from Vancouver, Canada | TypeScript, React, Next.js, Node.js" />
 		<title>{pageTitle}</title>
 	</head>
 	<body>
