edit footer and change copy on landing page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,37 +4,33 @@ const darkLink = 'rgb(26, 30, 43)';
 
 <hr class='hr'/>
 <footer>
-  <div class='links'>
-  <span>
-  <a href='https://github.com/tervonugget/astro'>Source code 🚀</a>
-  </span>
-  <span>
-  <a class='push-left' href='https://github.com/tervonugget'>Github</a>
+  <div class='footer-wrapper'>
+    <span class='links'>
+  <a href='https://github.com/tervonugget'>Github</a>
   <a href='https://www.linkedin.com/in/trevortylerlee/'>LinkedIn</a>
   </span>
-  </div>
-  <!-- The sprites are from pokedb.net!  -->
-  <div class='pokemon'>
-    <img src='/bidoof.gif' alt='Gen 4 Pokemon Bidoof' />
-    <img src='/mudkip.gif' alt='Gen 2 Pokemon Mudkip' />
+    <!-- The sprites are from pokedb.net!  -->
+  <span class='pokemon'>
     <img src='/ditto.gif' alt='Gen 1 Pokemon Ditto' />
     <img src='/togepi.gif' alt='Gen 2 Pokemon Togepi' />
-    <img src='/pichu.gif' alt='Gen 2 Pokemon Pichu' />
-    <img src='/wooper.gif' alt='Gen 2 Pokemon Wooper' />
+    <img class='delete' src='/pichu.gif' alt='Gen 2 Pokemon Pichu' />
+    <img class='delete' src='/wooper.gif' alt='Gen 2 Pokemon Wooper' />
+  </span>
   </div>
 </footer>
 
 <style define:vars={{ darkLink }}>
-  .links {
-    display: flex;
-    justify-content: space-between;
+  
+  .footer-wrapper {
+    display: grid;
+    justify-content: center;
   }
 
   a {
     font-size: 1rem;
     font-weight: 400;
     color: var(--darkLink);
-    border-bottom: none;
+    border-bottom: 2px solid transparent;
   }
 
   a:hover {
@@ -49,25 +45,42 @@ const darkLink = 'rgb(26, 30, 43)';
     color: dodgerblue;
   }
 
-  .push-left {
-    margin-right: 1rem;
-  }
-
   .hr {
     margin-top: 2rem;
   }
 
   .pokemon {
     display: flex;
-    justify-content: center;
     align-items: baseline;
-    margin-top: 2rem;
     gap: 0.5rem;
   }
 
+  .links {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 1rem;
+    text-align: center;
+  }
+
+  /* img {
+    display: none;
+  } */
+
   @media (min-width: 40rem) {
-    .push-left {
-      margin-right: 1.5rem;
+    img {
+      display: block;
+    }
+
+    .links {
+      gap: 1.5rem;
+      position: relative;
+      top: 0.9em;
+    }
+
+    .footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
     }
   }
 </style>
