--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	<p>I use things like TypeScript, Next.js, and NodeJS to create accessible, cross-platform web applications.</p>
 	<Card
 	title="Phished – Phish Friends & Family"
-	desc="Led a team of seven to develop a production-ready cross-platform app"
+	desc="Protect people you care about from phishing attacks by phishing them yourself"
 	href="/posts/phished"
 	src="/phished-screenshot.webp"
 	/>
