--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,31 +53,14 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 	@media (prefers-reduced-motion: no-preference) {
 		h1:hover {
-		background-image: linear-gradient(
-  45deg,
-  hsl(1deg 98% 50%) 0%,
-  hsl(23deg 100% 50%) 7%,
-  hsl(35deg 100% 50%) 13%,
-  hsl(45deg 100% 50%) 20%,
-  hsl(55deg 100% 47%) 27%,
-  hsl(66deg 100% 38%) 33%,
-  hsl(79deg 100% 33%) 40%,
-  hsl(102deg 81% 30%) 47%,
-  hsl(149deg 100% 26%) 53%,
-  hsl(176deg 100% 30%) 60%,
-  hsl(193deg 100% 41%) 67%,
-  hsl(200deg 100% 49%) 73%,
-  hsl(212deg 100% 67%) 80%,
-  hsl(234deg 100% 79%) 87%,
-  hsl(271deg 100% 79%) 93%,
-  hsl(299deg 100% 76%) 100%
+		background-image: linear-gradient(140deg, rgba(252,50,254,1) 15%, rgba(255,59,0,1) 30%, rgba(241,255,33,1) 45%, rgba(73,227,253,1) 60%, rgba(51,254,4,1) 75%, rgba(43,47,255,1) 90%
 );
 		-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent; 
   	-moz-background-clip: text;
   	-moz-text-fill-color: transparent;
 		background-size: 400%;
-		animation: animation 0.75s ease-in-out infinite;
+		animation: animation 1s ease-in-out infinite;
 		transform: scale(1.02);
 		}
 
@@ -86,31 +69,31 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 				background-position: 0% 100%;
 			}
 			10% {
-				background-position: 20% 80%
+				background-position: 40% 80%
 			}
 			20% {
-				background-position: 40% 60%
+				background-position: 80% 60%
 			}
 			30% {
-				background-position: 60% 40%
+				background-position: 120% 40%
 			}
 			40% {
-				background-position: 80% 20%
+				background-position: 160% 20%
 			}
 			50% {
-				background-position: 100% 0%
+				background-position: 200% 0%
 			}
 			60% {
-				background-position: 80% 20%
+				background-position: 160% 20%
 			}
 			70% {
-				background-position: 60% 40%
+				background-position: 120% 40%
 			}
 			80% {
-				background-position: 40% 60%
+				background-position: 80% 60%
 			}
 			90% {
-				background-position: 20% 80%
+				background-position: 40% 80%
 			}
 			100% {
 				background-position: 0% 100%
