refactor contact section to a component

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import Contact from '../components/Contact.astro';
 
 const { pageTitle } = Astro.props
 ---
@@ -20,6 +21,7 @@ const { pageTitle } = Astro.props
     <div class="wrapper flow">
       <Navigation />
       <slot />
+			<Contact />
 			<Footer />
     </div>
 	</body>
