fixed passing alt tag to card component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,13 +13,14 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	desc="Protect people you care about from phishing attacks by phishing them yourself"
 	href="/posts/phished"
 	src="/phished-screenshot.webp"
+	alt="A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
 	/>
 	<Card
 	title="HTML Color Name Game"
 	desc="An HTML color name matching challenge scored by calculating the difference between two colors"
 	href="/posts/color"
 	src="/noisy-gradient.webp"
-	alt='A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark.'
+	alt='A grainy gradient made of purple, pink, orange, and red.'
 	/>
 	<Card
 	title="Creative Work & Other Stuff"
