--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
+import Posts from '../components/Posts.astro';
 const pageTitle = "Trevor Tyler Lee | Homepage"
 ---
 
@@ -29,6 +30,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	src="/creative-work.png"
 	alt='The words "Creative Work", with a scribbled arrow aimed at the words "& Other Stuff".'
 	/>
+	<Posts />
 </BaseLayout>
 
 <style>
