--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 <BaseLayout pageTitle={pageTitle}>
 	<h1 class='name'>TREVOR LEE</h1>
 	<p>I'm a student at BCIT studying web development and digital design.</p>
-	<p>I use things like TypeScript, Next.js, and NodeJS to create accessible, cross-platform web applications.</p>
+	<p>I use JavaScript, React, and NodeJS to create web applications.</p>
 	<Card
 	title="Phished – Phish Friends & Family"
 	desc="Protect people you care about from phishing attacks by phishing them yourself"
