edit link to github

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const darkLink = 'rgb(26, 30, 43)';
 <footer>
   <div class='footer-wrapper'>
     <span class='links'>
-  <a href='https://github.com/tervonugget'>Github</a>
+  <a href='https://github.com/boogerbuttcheeks'>Github</a>
   <a href='https://www.linkedin.com/in/trevortylerlee/'>LinkedIn</a>
   </span>
     <!-- The sprites are from pokedb.net!  -->
