contact form spacing

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -27,6 +27,7 @@ import CopyButton from '../components/CopyButton';
 
   .color {
     cursor: default;
+		margin-top: 1rem;
   }
 
   @media (prefers-reduced-motion: no-preference) {
