--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -30,6 +30,10 @@ import CopyButton from '../components/CopyButton';
 		margin-top: 1rem;
   }
 
+	hr {
+		margin-top: 2rem;
+	}
+
   @media (prefers-reduced-motion: no-preference) {
 		.color:hover {
 		background-image: linear-gradient(140deg, rgba(252,50,254,1) 15%, rgba(255,59,0,1) 30%, rgba(241,255,33,1) 45%, rgba(73,227,253,1) 60%, rgba(51,254,4,1) 75%, rgba(43,47,255,1) 90%
