--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -5,7 +5,7 @@ const darkBg = 'rgb(41, 44, 57)'
 const lightBg = 'rgb(250, 250, 250)'
 ---
 
-<div>
+<div class='wrapper'>
   <hr />
   <h2>More Posts</h2>
   <a href='https://text2array.vercel.app/'>
@@ -67,7 +67,7 @@ const lightBg = 'rgb(250, 250, 250)'
   .post {
     background: var(--lightBg);
     border-radius: 8px;
-    padding: 0.5rem;
+    padding: 0.75rem;
     transition: 0.2s;
     display: flex;
     justify-content: space-between;
@@ -81,6 +81,14 @@ const lightBg = 'rgb(250, 250, 250)'
   .date {
     font-size: 0.75rem;
     opacity: 0.5;
+  }
+
+  .wrapper {
+    margin-bottom: 3rem;
+  }
+
+  hr {
+    margin-bottom: 2rem;
   }
 
 </style>
