--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,5 +1,7 @@
 ---
 import CopyButton from '../components/CopyButton';
+import Button from '../components/TestButton';
+// import {Toaster} from './toast'
 ---
 <hr />
 <div class="contact">
@@ -14,6 +16,7 @@ import CopyButton from '../components/CopyButton';
 			label="778-235-3815"
 			value="7782353815"
 		/>
+		<Button client:only="react"/>
 </div>
 
 <style>
