copies to clipboard

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -16,7 +16,14 @@ import Button from '../components/TestButton';
 			label="778-235-3815"
 			value="7782353815"
 		/>
-		<Button client:only="react"/>
+		<Button
+			client:only="react"
+			message='trevortylerlee@gmail.com'
+		/>
+		<Button
+			client:only="react"
+			message='778-235-3815'
+		/>
 </div>
 
 <style>
